# ProcessMemoryDumper

./: CMakeLists.txt  main.cpp
example/: while_loop_memory_dump.md
include/: memory_maps.h  memory_reader.h  proc_mem_reader.h  process_vm_reader.h
include/process_memory_dumper/: memory_maps.h  memory_reader.h  proc_mem_reader.h  process_vm_reader.h
src/: memory_maps.cpp  proc_mem_reader.cpp  process_vm_reader.cpp
test_binary/: CMakeLists.txt  main.cpp
